crates/compiler/tests/parse_errors/custom_problem.elm
module Main exposing (..)
type X = @
